--- a/01-Getting-Started-with-TikZ/02-first-tikz-drawing.tex
+++ b/01-Getting-Started-with-TikZ/02-first-tikz-drawing.tex
@@ -1,9 +1,9 @@
 \documentclass{article}
+\usepackage{tikz}
+\usetikzlibrary{quotes}
 \begin{document}
-\setlength{\unitlength}{1cm}
-\begin{picture}(1,1)
-  \put(0,0){\circle{1}}
-  \put(-0.5,0){\line(1,0){1}}
-  \put(-0.3,0.06){text}
-\end{picture}
+\begin{tikzpicture}
+\draw circle (0.5);
+\draw (-0.5,0) to ["text"] (0.5,0);
+\end{tikzpicture}
 \end{document}
