--- a/03-drawing-and-positioning-nodes/01-node-color.tex
+++ b/03-drawing-and-positioning-nodes/01-node-color.tex
@@ -1,5 +1,4 @@
-\documentclass[border=10pt]{standalone}
-\usepackage{tikz}
+\documentclass[tikz,border=10pt]{standalone}
 \begin{document}
 \begin{tikzpicture}
   \draw (4,2) node[draw, color=red, fill=yellow, text=blue] {TikZ};
