--- a/03-drawing-and-positioning-nodes/02-node-positioning.tex
+++ b/03-drawing-and-positioning-nodes/02-node-positioning.tex
@@ -1,5 +1,5 @@
 \documentclass[tikz,border=10pt]{standalone}
-\usetikzlibrary{shapes,positioning}
+\usetikzlibrary{shapes}
 \begin{document}
 \begin{tikzpicture}
   \node (r) at (0,1)   [draw, rectangle] {rectangle};
