--- a/03-drawing-and-positioning-nodes/05-node-anchor-south-west.tex
+++ b/03-drawing-and-positioning-nodes/05-node-anchor-south-west.tex
@@ -1,5 +1,4 @@
-\documentclass[border=10pt]{standalone}
-\usepackage{tikz}
+\documentclass[tikz,border=10pt]{standalone}
 \begin{document}
 \begin{tikzpicture}
   \draw[fill=red] (4,2) circle[radius=0.1];
