--- a/03-drawing-and-positioning-nodes/06-tikzpeople.tex
+++ b/03-drawing-and-positioning-nodes/06-tikzpeople.tex
@@ -1,5 +1,4 @@
-\documentclass[border=10pt]{standalone}
-\usepackage{tikz}
+\documentclass[tikz,border=10pt]{standalone}
 \usepackage{tikzpeople}
 \usetikzlibrary{shapes}
 \begin{document}
