--- a/03-drawing-and-positioning-nodes/09-node-right.tex
+++ b/03-drawing-and-positioning-nodes/09-node-right.tex
@@ -2,7 +2,7 @@
 \usetikzlibrary{positioning}
 \begin{document}
 \begin{tikzpicture}
-  \node [draw] (LaTeX) {TikZ};
-  \node [draw, right = 0.1cm of LaTeX] {PDF};
+  \node [draw] (TikZ) {TikZ};
+  \node [draw, right = 0.1cm of TikZ] {PDF};
 \end{tikzpicture}
 \end{document}
