--- a/15-fun/19-tikzling-flag.tex
+++ b/15-fun/19-tikzling-flag.tex
@@ -4,6 +4,6 @@
 \begin{document}
 \begin{tikzpicture}
   \hippo[body=brown!60!black,lightsaber=brown,think={\textsf{The end}}]
-  \pic (fr) [country=MW,hang=20,rotate=-30,scale=0.5] at (1.02,1.1) {worldflag};
+  \pic [country=MW,hang=20,rotate=-30,scale=0.5] at (1.02,1.1) {worldflag};
 \end{tikzpicture}
 \end{document}
