--- a/09-using-layers/07-transposing-matrix.tex
+++ b/09-using-layers/07-transposing-matrix.tex
@@ -1,1 +1,16 @@
-
+\documentclass[tikz,border=10pt]{standalone}
+\usetikzlibrary{matrix,positioning,quotes,decorations.pathreplacing,arrows.meta}
+\tikzset{standard/.style={matrix of nodes,left delimiter={(},right delimiter={)},inner sep=0pt,nodes={inner sep=0.3em}}}
+\begin{document}
+\begin{tikzpicture}[every node/.append style={font=\sffamily}]
+  \matrix[standard] (m)  {
+       1 & 2 & 3 \\
+       4 & 5 & 6 \\
+       7 & 8 & 9 \\};
+  \matrix[standard,right = 3cm of m] (n) {
+       1 & 4 & 7 \\
+       2 & 5 & 8 \\
+       3 & 6 & 9 \\};
+  \draw[->,shorten <=1em,shorten >=1em,thick] (m.east) to["Transpose"] (n);
+\end{tikzpicture}
+\end{document}
