--- a/03-drawing-and-positioning-nodes/14-image-node-arrows.tex
+++ b/03-drawing-and-positioning-nodes/14-image-node-arrows.tex
@@ -1,9 +1,10 @@
+% See 13-image-node.tex for solutions if the image files are missing
 \documentclass[tikz,border=10pt]{standalone}
 \usetikzlibrary{positioning}
 \begin{document}
 \begin{tikzpicture}
   \node (router) [inner sep=0pt]
-    {\includegraphics[width=2cm]{router.pdf}};
+    {\includegraphics[width=2cm]{router.eps}};
   \node (switch) [inner sep=0pt, right = of router]
     {\includegraphics[width=2cm]{switch.pdf}};
   \draw[double] (router) --
