--- a/12-drawing-smooth-curves/10-closed-hobby.tex
+++ b/12-drawing-smooth-curves/10-closed-hobby.tex
@@ -1,1 +1,10 @@
-
+\documentclass[tikz,border=10pt]{standalone}
+\usetikzlibrary{hobby}
+\begin{document}
+\begin{tikzpicture}
+  \foreach \x/\y in { -3/-2.4, -1.3/0.86,
+    1.3/-0.86, 3/2.4 }
+      \fill (\x,\y) circle (0.6mm);
+  \draw (-3,-2.4) to[closed, curve through = {(-1.3,0.86) (1.3,-0.86)}] (3,2.4);
+\end{tikzpicture}
+\end{document}
