--- a/07-filling-clipping-shading/15-clipped-segment.tex
+++ b/07-filling-clipping-shading/15-clipped-segment.tex
@@ -1,1 +1,8 @@
-
+\documentclass[tikz,border=10pt]{standalone}
+\begin{document}
+\begin{tikzpicture}[even odd rule]
+  \clip (-3,0) rectangle (3,2);
+  \clip (-1,0) circle (1.2) (-1,0) circle (2);
+  \fill[red!70]  (1,0) circle (1.2)  (1,0) circle (2);
+\end{tikzpicture}
+\end{document}
