--- a/13-plotting/01-plot-points.tex
+++ b/13-plotting/01-plot-points.tex
@@ -1,5 +1,6 @@
 \documentclass[tikz,border=10pt]{standalone}
 \usepackage{pgfplots}
+\pgfplotsset{compat=1.18}
 \begin{document}
 \begin{tikzpicture}
   \begin{axis}[grid]
